<resources>
    <string name="app_name">sehati</string>
    <string name="nama">Nama</string>
    <string name="nama_depan">Nama depan</string>
    <string name="nama_belakang">Nama belakang</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk">Masuk</string>
    <string name="masukkan_password_anda">Masukkan password Anda</string>
    <string name="password_minimal_8_karakter">Password minimal 8 karakter</string>
    <string name="password">Password</string>
    <string name="contoh_mail_com">contoh@mail.com</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="email">Email</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="lupa_password">Lupa password</string>
    <string name="reset_password">Reset password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Cek_Kesehatan">Cek Kesehatan</string>
    <string name="Riwayat">Riwayat </string>
    <string name="Profile">Profile</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>